--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "firebase": "^7.19.1",
     "next": "9.5.3",
     "react": "16.13.1",
-    "react-dom": "16.13.1"
+    "react-dom": "16.13.1",
+    "react-responsive": "^8.1.0"
   },
   "devDependencies": {
     "@types/node": "^14.6.4",
