--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "next": "9.5.3",
     "react": "16.13.1",
     "react-dom": "16.13.1",
-    "react-responsive": "^8.1.0"
+    "react-responsive": "^8.1.0",
+    "tiny-segmenter": "^0.2.0"
   },
   "devDependencies": {
     "@types/node": "^14.6.4",
